[COLOR yellow][B]v1.5.0[/B][/COLOR]
* Kodi version update - Added verification if custom Kodi APK/Windows software installed.
[COLOR yellow][B]v1.4.9[/B][/COLOR]
* Add support for custom Windows kodi software auto update check (Open browser, direct downloaded commented).
* Refactor code
[COLOR yellow][B]v1.4.8[/B][/COLOR]
* Migrate auto quick update notification URL + settings to custom to avoid default notification vars.
* Enable wizard's default notification settings - show post build install message.
* Remove startup build switch skin popup post build install.
[COLOR yellow][B]v1.4.7[/B][/COLOR]
* Refactor startup.py.
* wizard.py - on build install - enable all addons in build ZIP file.
[COLOR yellow][B]v1.4.6[/B][/COLOR]
* Revert Custom APK Installer code (unnecessary).
[COLOR yellow][B]v1.4.5[/B][/COLOR]
* Downloader notification window - switch to remote image "APK_DOWNLOADER_CODE_IMAGE_URL".
* wizard.py - apk_update_check - Fix yesno dialogs correct buttons order.
[COLOR yellow][B]v1.4.4[/B][/COLOR]
* AUTO BUILD INSTALL ON FIRST LAUNCH - Auto install single build (no prompt), else - open builds menu
[COLOR yellow][B]v1.4.3[/B][/COLOR]
* APK Update prompt - Remove TV Bro support - only Downloader/Google Chrome.
* Always show Downloader code notification window before checking if installed.
[COLOR yellow][B]v1.4.2[/B][/COLOR]
* APK Update prompt - Open Downloader / Browser (Chrome/TV Bro) instead of wizard's APK menu.
[COLOR yellow][B]v1.4.1[/B][/COLOR]
* Add APK update check: 2 options - open Downloader manually, or download through Kodi to externalFX
[COLOR yellow][B]v1.4.0[/B][/COLOR]
* Add auto prompt for APK update check on Kodi startup.
* Cancel downloader as default fx app. must configure on inital setup.
[COLOR yellow][B]v1.3.9[/B][/COLOR]
* install.py - show configured file explorer if not downloader.
[COLOR yellow][B]v1.3.8[/B][/COLOR]
* "downloader_installed_text" text change.
[COLOR yellow][B]v1.3.7[/B][/COLOR]