@@ -1,3 +1,5 @@
+[COLOR yellow][B]v1.5.1[/B][/COLOR]
+* Windows kodi auto update - remove open browser, direct download only.
 [COLOR yellow][B]v1.5.0[/B][/COLOR]
 * Kodi version update - Added verification if custom Kodi APK/Windows software installed.
 [COLOR yellow][B]v1.4.9[/B][/COLOR]
